# chat_bot_repo

./: .gitignore  README.md
chat_bot_server/: .gitignore  main.py  pyproject.toml  requirements.txt
chat_bot_server/chat_bot_server/: STT.py  TTS.py  Translate.py  config.yaml  containers.py  google_api.py  key.json  main.py  output_translate.txt  text.txt
chat_bot_server/chat_bot_server/api/: server.py
chat_bot_server/chat_bot_server/api/routers/: chat_bot_router.py
chat_bot_server/chat_bot_server/clients/: file_system_client.py  google_client.py  openai_client.py
chat_bot_server/chat_bot_server/data_models/: chat_bot.py  google_cloud.py
chat_bot_server/chat_bot_server/services/: chat_bot_service.py
