[tool.poetry]
name = "chat-bot-server"
version = "0.1.0"
description = ""
authors = ["jonathantoaf <yonitoaf123@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_bot_server"}]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-speech = "^2.23.0"
soundfile = "^0.12.1"
numpy = "^1.26.3"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
dependency-injector = "^4.41.0"
googletrans = "^3.0.0"
google-cloud-translate = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
default = true
name = "arti"
url = "https://jf.originai.co/artifactory/api/pypi/pypi/simple"